force-app/main/default/objects/Outreach_Omni_Settings__mdt/Outreach_Omni_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Outreach Omni Setting</label>
    <pluralLabel>Outreach Omni Settings</pluralLabel>
</CustomObject>