force-app/main/default/objects/Outreach_Omni_Settings__mdt/fields/Routing_Config_Developer_Name__c.field-meta.xml
<CustomField><fullName>Routing_Config_Developer_Name__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Routing Config Developer Name</label><length>80</length><type>Text</type></CustomField>