force-app/main/default/objects/Outreach_Omni_Settings__mdt/fields/Service_Channel_Developer_Name__c.field-meta.xml
<CustomField><fullName>Service_Channel_Developer_Name__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Service Channel Developer Name</label><length>80</length><type>Text</type></CustomField>