force-app/main/default/objects/Outreach_Omni_Settings__mdt/fields/Skill_Prefix__c.field-meta.xml
<CustomField><fullName>Skill_Prefix__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Skill Prefix</label><length>40</length><type>Text</type></CustomField>